--- a/k8s/echo-esp.yaml
+++ b/k8s/echo-esp.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: terminate-me
 spec:
   replicas: 1
   selector:
@@ -19,11 +19,11 @@ spec:
             secretName: service-account-creds
       containers:
       - name: esp
-        image: ghcr.io/agent-kit/esp:latest
+        image: ghcr.io/terminate-me/esp:latest
         args: [
           "--http_port=8081",
           "--backend=127.0.0.1:8080",
-          "--service=echo-api.endpoints.agent-kit.cloud.goog",
+          "--service=echo-api.endpoints.terminate-me.cloud.goog",
           "--rollout_strategy=managed",
           "--service_account_key=/etc/esp/creds/service-account-creds.json"
         ]
@@ -34,7 +34,7 @@ spec:
             name: service-account-creds
             readOnly: true
       - name: echo
-        image: ghcr.io/agent-kit/echo-server:latest
+        image: ghcr.io/terminate-me/echo-server:latest
         ports:
           - containerPort: 8080    
       nodeSelector:
@@ -44,7 +44,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: terminate-me
 spec:
   ports:
   - port: 80
@@ -59,7 +59,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: terminate-me
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
@@ -83,16 +83,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echo-google
-  namespace: agent-kit
+  namespace: terminate-me
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   tls:
   - hosts:
-      - echo-api.endpoints.agent-kit.cloud.goog
+      - echo-api.endpoints.terminate-me.cloud.goog
     secretName: echo-api-tls
   rules:
-  - host: echo-api.endpoints.agent-kit.cloud.goog
+  - host: echo-api.endpoints.terminate-me.cloud.goog
     http:
       paths:
       - path: /
