--- a/kubernetes/echo-espv2.yaml
+++ b/kubernetes/echo-espv2.yaml
@@ -19,12 +19,13 @@ spec:
             secretName: service-account-creds
       containers:
       - name: esp
-        image: ghcr.io/terminate-me/esp:latest
+        image: ghcr.io/terminate-me/esp-v2:latest
         args: [
-          "--http_port=8081",
+          "--listener_port=8081",
           "--backend=127.0.0.1:8080",
-          "--service=echo-api.endpoints.terminate-me.cloud.goog",
+          "--service=echo.endpoints.terminate-me.cloud.goog",
           "--rollout_strategy=managed",
+          "--non_gcp",
           "--service_account_key=/etc/esp/creds/service-account-creds.json"
         ]
         ports:
@@ -65,34 +66,10 @@ metadata:
 spec:
   tls:
   - hosts:
-      - zulu.timbx.me
-    secretName: zulu-tls
+      - echo.endpoints.terminate-me.cloud.goog
+    secretName: echo-tls
   rules:
-  - host: zulu.timbx.me
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: echo
-            port:
-              number: 80
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: echo-google
-  namespace: terminate-me
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
-spec:
-  tls:
-  - hosts:
-      - echo-api.endpoints.terminate-me.cloud.goog
-    secretName: echo-api-tls
-  rules:
-  - host: echo-api.endpoints.terminate-me.cloud.goog
+  - host: echo.endpoints.terminate-me.cloud.goog
     http:
       paths:
       - path: /
