--- a/kubernetes/echo-espv2.yaml
+++ b/kubernetes/echo-espv2.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: agentio
 spec:
   replicas: 1
   selector:
@@ -19,11 +19,11 @@ spec:
             secretName: service-account-creds
       containers:
       - name: esp
-        image: ghcr.io/agent-kit/esp-v2:latest
+        image: ghcr.io/agentio/esp-v2:latest
         args: [
           "--listener_port=8081",
           "--backend=127.0.0.1:8080",
-          "--service=echo.endpoints.agent-kit.cloud.goog",
+          "--service=echo.endpoints.agentio.cloud.goog",
           "--rollout_strategy=managed",
           "--non_gcp",
           "--service_account_key=/etc/esp/creds/service-account-creds.json"
@@ -35,7 +35,7 @@ spec:
             name: service-account-creds
             readOnly: true
       - name: echo
-        image: ghcr.io/agent-kit/echo-server:latest
+        image: ghcr.io/agentio/echo-server:latest
         ports:
           - containerPort: 8080    
       nodeSelector:
@@ -45,7 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: agentio
 spec:
   ports:
   - port: 80
@@ -60,16 +60,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echo
-  namespace: agent-kit
+  namespace: agentio
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   tls:
   - hosts:
-      - echo.endpoints.agent-kit.cloud.goog
+      - echo.endpoints.agentio.cloud.goog
     secretName: echo-tls
   rules:
-  - host: echo.endpoints.agent-kit.cloud.goog
+  - host: echo.endpoints.agentio.cloud.goog
     http:
       paths:
       - path: /
