--- a/kubernetes/echo-esp.yaml
+++ b/kubernetes/echo-esp.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echo
-  namespace: agentio
+  namespace: endpoints-examples
 spec:
   replicas: 1
   selector:
@@ -44,7 +44,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echo
-  namespace: agentio
+  namespace: endpoints-examples
 spec:
   ports:
   - port: 80
@@ -59,15 +59,26 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echo
-  namespace: agentio
+  namespace: endpoints-examples
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   tls:
   - hosts:
+      - echo.timbx.me
       - echo.endpoints.agentio.cloud.goog
     secretName: echo-tls
   rules:
+  - host: echo.timbx.me
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: echo
+            port:
+              number: 80
   - host: echo.endpoints.agentio.cloud.goog
     http:
       paths:
